--- a/public/css/main.css
+++ b/public/css/main.css
@@ -21,7 +21,10 @@ body {
 	position: fixed;
 	height: auto;
 	top: 0;
-	box-shadow: 1px 1px 6px 0px rgba(50, 50, 50, 0.75);
+	box-shadow: 0 0 6px 0px rgba(50, 50, 50, 0.75);
+	background-color: #FFF;
+	z-index: 1001;
+
 }
 
 /*************NAVEGADOR*********************/
@@ -29,7 +32,7 @@ body {
 
 .menuNavegador {
 	width: 100%;/**/
-	height: auto; 
+	min-width:50%;
 	z-index: 1002;
 	padding-top: 1%;
 	padding-bottom: 1%;
@@ -38,7 +41,7 @@ body {
 	font-weight: 700;
 	position: fixed;
 	background-color: #FFF;
-	box-shadow: 1px 1px 6px 0px rgba(50, 50, 50, 0.75);
+	box-shadow: 0 0 6px 0px rgba(50, 50, 50, 0.75);
 }
 
 .menuNavegador ul {
@@ -46,7 +49,6 @@ body {
 	text-align: center;
 	margin:0 auto;
 	padding: 0;
-	border: 1px solid blue;
 	/*display:table;*/
 }
 
@@ -55,16 +57,27 @@ body {
 	height: auto;
 }
 
+#clearfix:before,  
+#clearfix:after {  
+    content: " ";  
+    display: table;  
+}  
+#clearfix:after {  
+    clear: both;  
+}  
+#clearfix {  
+    *zoom: 1;  
+}  
+
 .menuNavegador li{
-	border: 1px solid red;
 	display:inline-block;
 	margin:0 auto;
-	padding-right: 4%;
-	padding-left: 4%;
+	padding-right: 3%;
+	padding-left: 3%;
 }
 
 .menuNavegador a {
-	display:block;
+	display:inline-block;
 	text-decoration: none;
 
 	text-align: center;
@@ -81,6 +94,11 @@ body {
 	color: #FF9933;
 }
 
+.menuNavegador a#pull {  
+    display: none;
+    text-align:center;
+}   
+
 #hiddenLogo{
 	width: 100%;
 	display:none;
@@ -93,7 +111,7 @@ body {
 .entrada {
 	width: 100%;
 	height: auto;
-	margin-bottom: 15%;
+	margin-bottom: 5%;
 	/*display: flex;
 	flex-wrap: wrap;
 	align-items: center; *//* align vertical */
@@ -102,7 +120,7 @@ body {
 .bienvenida {
 	width: 60%;
 	height: 40%;
-	margin: 15% 20% 3% 20%;
+	margin: 15% 20% 12% 20%;
 	color: #FFF;
 	text-align: center;
 	font-size: 200%;
@@ -208,6 +226,8 @@ body {
 	width: 55%;
 	float: right;
 	height: 80%;
+	border: 1px solid green;
+	height: 70%;
 }
 
 .imgBares img {
@@ -215,7 +235,7 @@ body {
 	max-height: 100%;
 	margin-left: 6%;
 	margin-top: 1.5%;
-	cursor:pointer;
+	cursor: pointer;
 }
 
 .barTitle {
@@ -234,7 +254,6 @@ body {
 }
 
 #calendario>div {
-	
 	width: 100%;
 	border: 1px solid blue;
 }
@@ -351,20 +370,9 @@ body {
 	padding: 0;
 }
 
-
-.contenedor-rutas{
-	width: 100%;
-	height: 83%;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: space-around;
-	align-items: center; /* align vertical */
-}
-
 #googleMap {
-	height: 95%;
-    width: 90%;
+	height: 70%;
+    width: 80%;
     /*min-width: 300px;*/
     padding: 0;
     opacity: 1;
@@ -390,6 +398,42 @@ body {
 }
 
 
+@media screen and (max-width: 600px) { 
+#visibleLogo{
+	display:none;
+}
+#hiddenLogo{
+	display:block;
+	padding: 2%;
+}
+#hiddenLogo img{
+	width: 45%;
+	height: auto;
+}
+.menuNavegador {   
+    height: auto;  
+}  
+.menuNavegador ul {  
+    width: 100%;  
+    display: block;  
+    height: auto;  
+}  
+.menuNavegador li {  
+    width: 50%;  
+    float: left;  
+    position: relative;  
+}  
+.menuNavegador li a {  
+    border-bottom: 1px solid #576979;  
+}  
+.menuNavegador a {  
+    text-align: left;  
+    width: 100%;  
+    text-indent: 25px;  
+}  
+}  
+
+
 @media (max-width: 480px){
 	#visibleLogo{
 		display:none;
@@ -403,16 +447,20 @@ body {
 		height: auto;
 	}
 	
-	.menuNavegador ul {
-		display: none;
-	}
-	
-	/*Display 'show menu' link*/
-	.show-menu {
-		display:block;
-	}
-	
-	.entrada {
+	.menuNavegador {  
+        border-bottom: 0;  
+    }  
+    .menuNavegador ul {  
+        display: none;  
+        height: auto;  
+    }  
+    .menuNavegador a#pull { 
+        display: block;  
+        background-color: #fff;  
+        width: 100%;  
+        position: relative;  
+    }  
+    .entrada {
 		width: 100%;
 		height: 100%;
 		margin-top: 50%;
@@ -423,7 +471,10 @@ body {
 	
 	.bienvenida{
 		margin: 0 auto;
-		width: 80%;	
+		width: 80%;
+		height: 40%;
+		min-width:300px;
+		min-height:200px;
 	}
 	
 	.bienvenida h2 {
@@ -437,7 +488,8 @@ body {
 	
 	#btnUnete {
 		margin: 0 auto;
-		width: 80%;
+		width: 60%;
+		min-width:60%;
 		text-align: center;
 	}
 	
@@ -446,7 +498,7 @@ body {
 	}
 	
 	.flex-container {
-		width: 80%;
+		width: 60%;
 		margin: 0 auto;
 		margin-top: 5%;
 		padding: 1%;
@@ -468,6 +520,11 @@ body {
 	  	margin: 0 auto;
 	}
 	
+	.navRedesLateral{
+		display:none;
+		border:1px solid blue;
+	}
+	
 	#twitterstream{
 		
 		border: solid 1px black;
@@ -484,5 +541,71 @@ body {
 		
 		
 	}
+	
 
 }
+
+	/*********** RUTAS **********/
+	
+.contenedor-rutas{
+	width: 100%;
+	height: 85%;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	align-items: center; /* align vertical */
+	border: solid 1px orange;
+}
+
+/* imagen rutas */
+.btnRutas{
+	
+	/* iconos de: http://www.iconsbyhour.co.uk/1pm.html*/
+	
+	height: 5%;
+	width: 5%;
+	/* border: solid 1px blue;*/
+}
+
+#menu_rutas{
+	
+	text-align: center;
+	margin-top: 2%;
+	border: solid 1px purple;
+	display: flex;
+	flex-direction: row; 
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+#menu_rutas a > img{
+	
+	height: 25%;
+	width: 25%;
+	/* -webkit-filter: invert(100%); */
+	background-color: #FF9933;
+	/* #ffa659 */
+	border-radius: 50%;
+	
+}
+
+#menu_rutas ul{
+	
+	list-style: none;
+	border: solid 1px yellow;
+	
+}
+
+#menu_rutas > ul > li {
+	
+	text-align: center;
+	width: 10%;
+	display: inline-block;
+	border: 1px solid green;
+	/*border-radius: 50%;*/
+	
+
+}
+	
+
