--- a/views/administracion.ejs
+++ b/views/administracion.ejs
@@ -25,11 +25,11 @@
 		
 		<div class="contenedor-editar">
 		
-			<div class="btn-editar"><a href="/edita-pintxos">Ver Pintxos</a></div>
+			<a href="/edita-pintxos"><div class="btn-editar">Pintxos</div></a>
 			
-			<div class="btn-editar"><a href="#">Ver Bares </a></div>
+			<a href="#"><div class="btn-editar">Bares</div></a>
 	
-			<div class="btn-editar"><a href="#">Ver Usuarios</a></div>
+			<a href="#"><div class="btn-editar">Usuarios</div></a>
 	
 		</div>
 	</div>
