--- a/public/css/votaciones.css
+++ b/public/css/votaciones.css
@@ -37,9 +37,26 @@
 }
 
 .total_votes {
+    width:35%;
     background: #eaeaea;
     top: 58px;
     left: 0;
     padding: 5px;
-    position:   absolute;  
 } 
+.media_votes {
+    width:35%;
+    background: #eaeaea;
+    top: 58px;
+    left: 0;
+    padding: 5px;
+}
+.votos{
+    margin-top:5%;
+    width:100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+	justify-content: space-around;
+	align-items: center; /* align vertical */
+
+}
