--- a/views/index.ejs
+++ b/views/index.ejs
@@ -160,93 +160,83 @@
 						<div id="menu_rutas">
 							
 							<ul>
-								
+					
 								<!-- Para que muestre las rutas son: btn1 hasta btn6 -->
 							    <li>
 							    	<a id="btn1" href="#ruta">
-										<img class="btnRutas" src="img/pinterest.png"></img>
+										<div class="circulo_btn">
+											<img src="img/vegetable4.png"></img>
+										</div>
 										<br>
-										<p>Croqueta</p>
+										<p>Bola <br> Experience</p>
 									</a>
 							    </li>
 							    
 							    <li>
 							    	<a id="btn1" href="#ruta">
 										<!-- <img src="img/prawn.png" ></img> -->
-										<img src="img/pinterest.png" ></img>
+										<div class="circulo_btn">
+											<img src="img/fruit35.png"></img>
+										</div>
 										<br>
-										<p>Croqueta</p>
+										<p>Classic <br> Croqueta</p>
 									</a>
 							    </li>
 							    
 							    <li>
 							    	<a id="btn1" href="#ruta">
-										<img src="img/pinterest.png" ></img>
+										<div class="circulo_btn">
+											<img src="img/sea17.png"></img>
+										</div>
 										<br>
-										<p>Croqueta</p>
+										<p>Sushi <br> Lover</p>
 									</a>
 							    </li>
 							    
 							     <li>
 							    	<a id="btn1" href="#ruta">
-										<img src="img/pinterest.png" ></img>
+										<div class="circulo_btn">
+											<img src="img/barbecue2.png"></img>
+										</div>
 										<br>
-										<p>Croqueta</p>
+										<p>Brochette <br> Kid</p>
 									</a>
 							    </li>
 							    
 							     <li>
 							    	<a id="btn1" href="#ruta">
-										<img src="img/pinterest.png" ></img>
+										<div class="circulo_btn">
+											<img src="img/vegetable6.png"></img>
+										</div>
 										<br>
-										<p>Croqueta</p>
+										<p>Vegan 4 <br> Life</p>
 									</a>
 							    </li>
 							    
 							     <li>
 							    	<a id="btn1" href="#ruta">
-										<img src="img/pinterest.png" ></img>
+										<div class="circulo_btn">
+											<img src="img/wine1.png"></img>
+										</div>
 										<br>
-										<p>Croqueta</p>
+										<p>Wine <br> Expert</p>
 									</a>
 							    </li>
+							    
+							    <li id="cerveza">
+							    	<a id="btn1" href="#ruta">
+										<div class="circulo_btn">
+											<img src="img/drink2.png"></img>
+										</div>
+										<br>
+										<p>Beer <br> Gourmet</p>
+									</a>
+							    </li>
+							  
 							    
 						  	</ul>
 							
 							
-							<!--
-							
-							<a href="">
-								<img src="img/sushi.png"></img>
-								<br>
-								<p>Sushi</p>
-							</a>
-							
-							<a href="">
-								<img src="img/bacon.png"></img>
-								<br>
-								<p>Bola</p>
-							</a>
-							
-							<a href="">
-								<img src="img/sushi.png"></img>
-								<br>
-								<p>Chatka</p>
-							</a>
-							
-							<a href="">
-								<img src="img/sushi.png"></img>
-								<br>
-								<p>Paella</p>
-							</a>
-							
-							<a href="">
-								<img src="img/sushi.png"></img>
-								<br>
-								<p>Especialidades</p>
-							</a>
-							
-							-->
 						
 						</div>	
 						
@@ -259,17 +249,17 @@
 				
 				<div class="contenedor" id="pintxos">
 					
-				</div>
+				</div><!--Cierre pintxos-->
 				
 				<div class="contenedor" id="bares">
 					
-				</div>
+				</div><!--Cierre bares-->
 				
 				<div class="contenedor" id="calendario">
 					<div class="titulo">
 						<h1>Calendario</h1>
 						<h2>Organiza tu pintxopote</h2>
-						
+					</div>	
 						
 						<div id="twitterstream">
 							<a class="twitter-timeline" href="https://twitter.com/ThePintxopo" data-widget-id="562877322005852161">Tweets by @ThePintxopo</a>
@@ -301,33 +291,30 @@
 						    
 						    
 						</script>
-					
 					  
 					   <div id="tweetd"></div>
 					   
-					   
-					</div>
-				</div>
+					</div><!--Cierre calendario-->
+					<% include footer %>
 
-			</div>
+				</div><!--Cierre secciones-->
 
-		<div>
+				<div><!--Navegador redes lateral-->
+						
+					<nav class="navRedesLateral">
+						<ul>				
+							<li><a href="#"><img src="img/facebook.png" ></a></li>
+							<li><a href="#"><img src="img/google_plus.png"></a></li>
+							<li><a href="#"><img src="img/twitter.png" ></a></li>
+							<li><a href="#"><img src="img/pinterest.png" ></a></li>
+						</ul>				
+					</nav>
+					
+				</div><!--Cierre navegador redes lateral-->
 				
-			<nav class="navRedesLateral">
-				<ul>				
-					<li><a href="#"><img src="img/facebook.png" ></a></li>
-					<li><a href="#"><img src="img/google_plus.png"></a></li>
-					<li><a href="#"><img src="img/twitter.png" ></a></li>
-					<li><a href="#"><img src="img/pinterest.png" ></a></li>
-				</ul>				
-			</nav>
-			
-		</div>
-		
-		<% include login-modal %>
-		<% include signup-modal %>
+				<% include login-modal %>
+				<% include signup-modal %>
 
-		
 	</body>
 
 </html>
