--- a/views/index.ejs
+++ b/views/index.ejs
@@ -127,7 +127,7 @@
 				<!--<a href="#contact" data-toggle="modal"><img class="imgBoton" src="img/btn-unete.png"></img></a>-->
 			</div>
 			<div>
-				<section class="flex-container">	
+				<section class="flex-container" id="navRedes1">	
 					<article class="botonesRedes">
 						<a href="https://www.facebook.com/profile.php?id=100004284648257" target="_blank"><img src="img/facebook.png" ></a>
 					</article class="botonesRedes">
