--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,15 +1,23 @@
-<footer id="footer">
+<footer>
 	<nav id="navFooter">
 		<ul>
-			<li><a>Home</a></li>
-			<li><a>Rutas</a></li>
-			<li><a>Pintxos</a></li>
-			<li><a>Bares</a></li>
-			<li><a>Eventos</a></li>
-			<li><a>About</a></li>
-			<li><a>API</a></li>
+			<li><a href="">Home</a></li>
+			<li><a href="#rutas">Rutas</a></li>
+			<li><a href="#pintxos">Pintxos</a></li>
+			<li><a href="#bares">Bares</a></li>
+			<li><a href="#calendario">Eventos</a></li>
+			<li><a href="/about">About</a></li>
+			<li><a href="/api">API</a></li>
 		</ul>
+		
 	</nav>
-	<div>contacto: pintxopo.ss@gmail.com</div>
-	<div>copyrigth</div>
+	
+	<ul id="contacto_footer">
+			<li><a href=""><img src="img/social_footer/googleplus.png">pintxopo.ss@gmail.com</a></li>
+			<li><a href="https://twitter.com/ThePintxopo"><img src="img/social_footer/twitter.png">@thepintxopo</a></li>
+			<li><a href="https://www.facebook.com/profile.php?id=100004284648257"><img src="img/social_footer/facebook.png">thepintxopo</a></li>
+			<li><a href="https://www.pinterest.com/thepintxopo/"><img src="img/social_footer/pinterest.png">thepintxopo</a></li>
+		</ul>
+		
+	<div>© 2015 croquetaOPS, Inc. All rights reserved.</div>
 </footer>
