--- a/public/css/main.css
+++ b/public/css/main.css
@@ -272,14 +272,74 @@ body {
 }
 
 #calendario {
-    
-    width: 100%;
-    border: 1px solid pink;
+    border: 1px solid red;
+    height: auto;
 }
 
-#calendario>div {
-	width: 100%;
+.contenidoCalendario{
+	margin-top:2%;
+	width:100%;
+	height:90%;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	align-items: flex-start; /* align vertical */
+}
+
+.eventos{
+	height:90%;
+	width:30%;
+}
+
+.noticias{
+	height:90%;
+	width:30%;
 	border: 1px solid blue;
+}
+
+
+.tituloArticulo{
+	font-family: 'Old Standard TT', serif;
+	font-size: 2.5em;
+	color:#181818;
+}
+.info{
+	width: 100%;
+	display:flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: flex-start;
+	align-items: flex-start; /* align vertical */
+}
+.info p{
+	width:50%;
+}
+
+.info figure{
+	width:45%;
+	margin-right: 3%;
+}
+
+.info figure img{
+	max-width:100%; 
+	max-height:100%;
+}
+.entrada footer{
+	padding:2%;
+	background-color:#eee;
+	border:none;
+}
+.twitter{
+	text-align:center;
+	height:90%;
+	width:30%;
+}
+
+#twitterstream{
+	margin: 0 auto;
+	width: 80%;
+		
 }
 
 .pintxo{
@@ -324,15 +384,7 @@ body {
 	color: #797070;
 }
 
-#footer{
-	position:relative;
-	height:20%;
-	background-color:#0f151a;
-	bottom:0px;
-	left:0px;
-	right:0px;
-	left:0;
-}
+
 
 @media (max-width: 480px){
 	
@@ -423,8 +475,10 @@ body {
 }
 
 .titulo{
+	width:100%;
 	height: auto;
 }
+
 .titulo > h1{
 	font-family: 'Old Standard TT', serif;
 	color: #303030;
@@ -506,6 +560,7 @@ body {
 	#hiddenLogo{
 		display:block;
 		padding: 2%;
+		width: 60%;
 	}
 	#hiddenLogo img{
 		width: 45%;
@@ -586,17 +641,7 @@ body {
 		width: 50%;
 		
 	}
-	
-	#calendarioiframe > iframe{
-		
-	/*	border-width:0;*/
-		width: 70%; 
-		height: 100%;
-		border: 1px solid blue;
-		
-		
-	}
-	
+
 	.principal {
 		height: 40%;
 		width: 100%;
@@ -615,17 +660,19 @@ body {
 	
 	.imgBares {
 		width: 90%;
-		height: 30%;
 		margin-left: 5%;
-		margin-top: 8%;
+		margin-top: 6%;
 		float: left;
+		height: 40%;
 	}
 	
 	.imagenesBares {
 		width: 40%;
+		height: 30%;
 	}
 	
 	.imgBares img {
+		max-height: 100%;
 		width: 100%;
 		cursor: pointer;
 	}
