--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,8 +11,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		
 		<!--Estilos principales-->
-		<link rel="stylesheet" type="text/css" href="css/main.css" >
-		<link rel="stylesheet" type="text/css" href="css/votaciones.css" >	
+		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link rel="stylesheet" type="text/css" href="css/votaciones.css">	
+		<link rel="stylesheet" type="text/css" href="css/footer.css">
 
 		<link href='https://fonts.googleapis.com/css?family=Lora|PT+Sans+Narrow|Old+Standard+TT:400italic,400|Tangerine|Open+Sans+Condensed:300|Courgette' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -41,7 +42,7 @@
 		<script src="js/googleMap.js" type="text/javascript"></script>
 		<script src="js/calcRutas.js" type="text/javascript"></script>
 		<script src="js/cargarModal.js" type="text/javascript"></script>
-		<script src="js/socketsTwitter.js" type="text/javascript"></script>
+		<script src="js/twittertimeline.js" type="text/javascript"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 		
 		<!--<script src="js/validarFormulario.js" type="text/javascript"></script>-->
@@ -256,48 +257,78 @@
 				</div><!--Cierre bares-->
 				
 				<div class="contenedor" id="calendario">
-					<div class="titulo">
-						<h1>Calendario</h1>
-						<h2>Organiza tu pintxopote</h2>
-					</div>	
-						
-						<div id="twitterstream">
-							<a class="twitter-timeline" href="https://twitter.com/ThePintxopo" data-widget-id="562877322005852161">Tweets by @ThePintxopo</a>
-							</div>
-						<script>
-						
-						///widget de twitter
-						    ! function(d, s, id) {
-						        var js, fjs = d.getElementsByTagName(s)[0],
-						            p = /^http:/.test(d.location) ? 'http' : 'https';
-						        if (!d.getElementById(id)) {
-						            js = d.createElement(s);
-						            js.id = id;
-						            js.src = p + "://platform.twitter.com/widgets.js";
-						            fjs.parentNode.insertBefore(js, fjs);
-						        }
-						    }(document, "script", "twitter-wjs");
-						    
-						    
-						    //instalar: sudo npm install socket.io@1.0
-							
-					        var socket = io.connect('http://proyecto-pintxopote-artzai.c9.io/');
-					        socket.on('stream', function(tweet, user, avatar, media){
-					        	$('#tweetd').append('<div class="image"></div><div><img src="'+avatar+'" width="48" height="48"><a href="http://twitter.com/'+user+'" target="_blank">@'+user+'</a> '+tweet+'</div>');
-					        	$('#tweetd').css({ 'color': '#292f33', 'font-family': 'Arial,"Helvetica Neue",sans-serif' });
-					        	$('.tweets').css({ 'color' : '#55ACEE' })
 					
-					        });
-						    
-						    
-						</script>
-					  
-					   <div id="tweetd"></div>
-					   
-					</div><!--Cierre calendario-->
-					<% include footer %>
+					<div class="titulo">
+						<h1>Eventos</h1>
+						<h2>Organiza tu pintxopote</h2>
+					</div>	<!--Cierre titulo-->
+					
+					<div class="contenidoCalendario">
+						<section class="eventos">
+							<article class="entrada">
+							  <header>
+							    <h1 class="tituloArticulo">Cata de pintxos en San Martín</h1>
+							    <time class="updated" datetime="2010-08-07 11:11:03-0400" pubdate>11-02-2015</time>
+							    <p class="byline author vcard">
+							        por <span class="fn">Borja Muñoz</span>
+							    </p>
+							  </header>
+							
+							  <div class="info">
+							  	<figure>
+							        <img src="img/pintxos-cata.jpg" alt="" />
+							    </figure>
+							      <p>Uno de los hábitos más populares entre los donostiarras es “ir de pintxos”. Esta costumbre vasca consiste en alternar de bar en bar, tomando un “zurito” –trago de cerveza más corto que la caña– o un “txikito” (pequeño vaso de vino) acompañado de un pintxo.</p>
 
-				</div><!--Cierre secciones-->
+							      <a class="entry-unrelated" href="http://www.msanmartin.es">+info: Mercado San Martín</a>
+							  </div>
+							
+							  <footer>
+							    <p>
+							     <strong>Fecha:</strong>15/03/2015, <strong>Horario:</strong>18:00, <strong>Lugar:</strong>Mercado San Martin
+							    </p>
+							  </footer>
+							</article>
+							<article class="entrada">
+							  <header>
+							    <h1 class="tituloArticulo">Presentación libro: "Sushi fácil"</h1>
+							    <time class="updated" datetime="2010-08-07 11:11:03-0400" pubdate>11-02-2015</time>
+							    <p class="byline author vcard">
+							        por <span class="fn">Sheyla Pérez</span>
+							    </p>
+							  </header>
+							
+							  <div class="info">
+							  	<figure>
+							        <img src="img/sushi.jpg" alt="Portrait of Tammy Strobel" />
+							      </figure>
+							      <p>Un nuevo concepto de libros de cocina sumamente prácticos para aquellos que se sienten a gusto cocinando. Una colección para personas que ya han visto parte del mundo; las recetas son sanas y fáciles de preparar, además de internacionales. Cada volumen incluye 50 recetas clásicas con las últimas tendencias. El sushi es una ...</p>
+
+							      
+
+							      <a class="entry-unrelated" href="http://www.casadellibro.com/">+info La casa del libro</a>
+							  </div>
+							
+							  <footer>
+							    <p>
+							     <strong>Fecha:</strong>19/03/2015, <strong>Horario:</strong>19:00, <strong>Lugar:</strong>Elkar
+							    </p>
+							  </footer>
+							</article>
+						</section>
+						<section class="noticias"></section>
+						<section class="twitter">
+							<p>Lo que se habla de 'The pintxopo':</p>
+							<div id="twitterstream"><a class="twitter-timeline" href="https://twitter.com/ThePintxopo" data-widget-id="562877322005852161">Tweets by @ThePintxopo</a></div></section>
+					</div>	<!--CIERRE contenidoCALENDARIO-->
+					  
+					</div><!--CIERRE CALENDARIO-->
+
+			 	<% include footer %>
+
+				</div><!--Cierre SECCIONES-->
+				
+				
 
 				<div><!--Navegador redes lateral-->
 						
