--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -13,10 +13,10 @@
 	</nav>
 	
 	<ul id="contacto_footer">
-			<li><a href=""><img src="img/social_footer/googleplus.png">pintxopo.ss@gmail.com</a></li>
-			<li><a href="https://twitter.com/ThePintxopo"><img src="img/social_footer/twitter.png">@thepintxopo</a></li>
-			<li><a href="https://www.facebook.com/profile.php?id=100004284648257"><img src="img/social_footer/facebook.png">thepintxopo</a></li>
-			<li><a href="https://www.pinterest.com/thepintxopo/"><img src="img/social_footer/pinterest.png">thepintxopo</a></li>
+			<li><a href=""><img src="img/social_footer/googleplus.png"></a></li>
+			<li><a href="https://twitter.com/ThePintxopo"><img src="img/social_footer/twitter.png"></a></li>
+			<li><a href="https://www.facebook.com/profile.php?id=100004284648257"><img src="img/social_footer/facebook.png"></a></li>
+			<li><a href="https://www.pinterest.com/thepintxopo/"><img src="img/social_footer/pinterest.png"></a></li>
 		</ul>
 		
 	<div>© 2015 croquetaOPS, Inc. All rights reserved.</div>
